# HackRPI-2025-Wurst

./: .dockerignore  .env.example  .gitignore  DATABASE_CONNECTION_GUIDE.md  Dockerfile  FUNCTION_CALLING_GUIDE.md  FUNCTION_CALLING_USAGE_GUIDE.md  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  requirements.md  requirements.txt  setup_remote_db.py  test_function_calling.py  test_llm_ui.py  test_rag_system.py
.kiro/specs/: gemini-function-calling.md
.kiro/specs/llm-file-chatbot/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
backend/: chat_service.py  chunking.py  config.py  db.py  embeddings.py  file_parser.py  function_handler.py  llm_client.py  local_embeddings.py  logging_config.py  lsh_indexer.py  mcp_query.py  mcp_tools.py  retrieval.py
docs/: ARCHITECTURE.md
docs/runbooks/: lsh_and_embeddings.md
frontend/: index.html  script.js  style.css
llm-file-chatbot/: index.html  package.json
llm-file-chatbot/src/: App.css  App.tsx
preload_docs/: test_document.txt
scripts/: build_lsh_index.py  parquet_to_postgres.py  preload_data.py
test_documents/: sample1.txt  sample2.txt  sample3.txt
tests/: run_embedding_test.py  test_function_calling.py  test_llm_ui.py  test_local_embeddings.py  test_lsh_db_integration.py  test_mcp_e2e.py  test_rag_system.py
