[project]
name = "hackrpi-2025-wurst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.3.0",
    "lshrs>=0.1.1a1",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "fastparquet>=2024.11.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
